fix: Foot alignment

--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -264,12 +264,12 @@ a {
     }
 
 .site-footer {
-    background-color: rgba(15,23,42,0.96);
     color: white;
-    text-align: center;             
-    margin-top: auto;
-    padding: 24px 16px;
-    background: var(--bg)
+    text-align: center; 
+    margin-top: auto;            
+    padding: 14px 16px;
+    background: var(--bg);
+    font-size: 0.9rem;
 }
 
 .stat-card span{
